--- a/index.html
+++ b/index.html
@@ -11,15 +11,40 @@
     <button onclick="generateNewWord()">Generate Word</button><br><br>
     <input id="guess1" type="text" maxlength="5">
     <button id="button1" onclick="playnow(1)">Submit</button><br>
-    <input id="guess2" type="text" maxlength="5">
+    <p id="answer11"></p>
+    <p id="answer12"></p>
+    <p id="answer13"></p>
+    <p id="answer14"></p>
+    <p id="answer15"></p>
+    <br><input id="guess2" type="text" maxlength="5">
     <button id="button2" onclick="playnow(2)">Submit</button><br>
-    <input id="guess3" type="text" maxlength="5">
+    <p id="answer21"></p>
+    <p id="answer22"></p>
+    <p id="answer23"></p>
+    <p id="answer24"></p>
+    <p id="answer25"></p>
+    <br><input id="guess3" type="text" maxlength="5">
     <button id="button3" onclick="playnow(3)">Submit</button><br>
-    <input id="guess4" type="text" maxlength="5">
+    <p id="answer31"></p>
+    <p id="answer32"></p>
+    <p id="answer33"></p>
+    <p id="answer34"></p>
+    <p id="answer35"></p>
+    <br><input id="guess4" type="text" maxlength="5">
     <button id="button4" onclick="playnow(4)">Submit</button><br>
-    <input id="guess5" type="text" maxlength="5">
+    <p id="answer41"></p>
+    <p id="answer42"></p>
+    <p id="answer43"></p>
+    <p id="answer44"></p>
+    <p id="answer45"></p>
+    <br><input id="guess5" type="text" maxlength="5">
     <button id="button5" onclick="playnow(5)">Submit</button><br>
-    <input id="guess6" type="text" maxlength="5">
+    <p id="answer51"></p>
+    <p id="answer52"></p>
+    <p id="answer53"></p>
+    <p id="answer54"></p>
+    <p id="answer55"></p>
+    <br><input id="guess6" type="text" maxlength="5">
     <button id="button6" onclick="playnow(6)">Submit</button><br>
     <h1 id="answer6"></h1>
 </center>
